--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -59,6 +59,21 @@
     /*BOTÃO DO CARROSSEL*/
 }
 
+.botaoCardsPrev{
+    background-color: red;
+    width: 50px;
+    height: 50px;
+    top: 50%;
+    position: absolute;
+}
+
+.botaoCardsNext{
+    background-color: red;
+    width: 50px;
+    height: 50px;
+    top: 50%;
+}
+
 .btnVermais{
     background-color: white;
     color: black;
@@ -112,11 +127,6 @@
     background-position: 90%;
     background-repeat: no-repeat;
     background-size: 50%;
-}
-
-.social{
-    width: 50px;
-    height: 50px;
 }
 
 .tamanhoCard{
