--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -222,10 +222,18 @@
       </div>
       
       <!--Controls-->
-      <div class="d-flex justify-content-center topmargin-10">
-        <a class="button-Carousel-Cards" href="#multi-item-example" data-slide="prev"><i class="fa fa-chevron-left"> < </i></a>
-        <a class="button-Carousel-Cards" href="#multi-item-example" data-slide="next"><i class="fa fa-chevron-right"> > </i></a>
-      </div>
+      <!-- <div class="d-flex justify-content-center topmargin-10">
+        <a class="button" href="#multi-item-example" data-slide="prev"><i class="fa fa-chevron-left"> < </i></a>
+        <a class="button" href="#multi-item-example" data-slide="next"><i class="fa fa-chevron-right"> > </i></a>
+      </div> -->
+      <a class="carousel-control-prev botaoCardsPrev" href="#carouselExampleSlidesOnly" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Anterior</span>
+      </a>
+      <a class="carousel-control-next botaoCardsNext" href="#carouselExampleSlidesOnly" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Próximo</span>
+      </a>
       <!--/.Controls-->
     </div>
     <!--/.Carousel Wrapper-->
@@ -333,26 +341,3 @@
 <!--/Nossos Parceiros-->
 
 
-<!--Rodapé-->
-<hr>
-<footer>
-    <div class="container">
-        <div class="row mb-3">
-            <div class="col-md-12 d-flex justify-content-center">
-                <a href="https://www.instagram.com" target="_blank" class="p-2">
-                    <img class="social" src="https://i.imgur.com/dCU0HWR.png" alt="Logo instagram">
-                </a>
-                <a href="https://www.facebook.com" target="_blank" class="p-2">
-                    <img class="social" src="https://i.imgur.com/Oze6Zm3.png" alt="Logo instagram">
-                </a>
-            </div>
-        </div>
-
-        <div class="col-md-12">
-            <p class="text-center">
-                Todos os direitos reservados: Projeto Livraria Abraço
-            </p>
-        </div>
-    </div>
-</footer>
-<!--/Rodapé-->
